# pywtl

./: .gitignore  .travis.yml  README.md  entry_points.cfg  pyproject.toml  setup.cfg  wercker.yml
.github/workflows/: flake8.yaml  test.yml
src/wtl/: __init__.py  argify.py  clangfmt.py  cli.py  hello.py  iconify.py  mafranges.py  options.py  pbs.py  pdfcat.py  photream.py  skel.py  timestamp.py  totiff.py
src/wtl/tex/: aux.py  bib.py  bibextract.py  bibfilter.py  cleanbbl.py  cleanbib.py  enumeratefig.py  pandocable.py
wtl/: __init__.py  argify.py  clangfmt.py  cli.py  gre.py  hello.py  iconify.py  killmds.py  mafranges.py  options.py  passgen.py  pbs.py  pdfcat.py  photream.py  remote.py  remv.py  shell.py  skel.py  slack.py  slack_webhook_url  sub.py  totiff.py  webp.py
wtl/tex/: aux.py  bib.py  bibextract.py  bibfilter.py  cleanbbl.py  cleanbib.py  enumeratefig.py  pandocable.py  parsebib.py
