[build-system]
requires = ["flit_core >=3.6,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wtl"
authors = [{name = "Watal M. Iwasaki", email = "heavywatal@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["description", "version"]
requires-python = ">=3.11"
dependencies = [
  "psutil",
  "requests"
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[project.urls]
Source = "https://github.com/heavywatal/pywtl"

[project.scripts]
"argify.py" = "wtl.argify:main"
"hello.py" = "wtl.hello:main"
"mafranges.py" = "wtl.mafranges:main"
"photream.py" = "wtl.photream:main"
"qsub-gen.py" = "wtl.pbs:main"
"remv.py" = "wtl.remv:main"
"skel.py" = "wtl.skel:main"
"webp.py" = "wtl.webp:main"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
select = ["ALL"]
ignore = [
  "D",    # docstring
  "ANN",  # annotation
  "T201", # print
  "S101", # assert
  "S603", # subprocess
  "COM",  # trailing comma
  "DTZ",  # timezone
]
