[project]
name = "wtl"
version = "0.1.0"
description = "Personal Python Package"
authors = [{ name = "Watal M. Iwasaki", email = "heavywatal@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "PyYAML",
  "requests",
]

[dependency-groups]
dev = [
  "ruff",
]

[project.urls]
Source = "https://github.com/heavywatal/pywtl"

[project.scripts]
"argify.py" = "wtl.argify:main"
"hello.py" = "wtl.hello:main"
"mafranges.py" = "wtl.mafranges:main"
"photream.py" = "wtl.photream:main"
"qsub-gen.py" = "wtl.pbs:main"
"remv.py" = "wtl.remv:main"
"skel.py" = "wtl.skel:main"
"webp.py" = "wtl.webp:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D1",   # docstring missing
  "D203", # docstring one-blank-line-before-class
  "D213", # docstring multi-line-summary-second-line
  "ANN401", # Any
  "T201", # print
  "S101", # assert
  "S603", # subprocess
  "COM812", # trailing comma
]
