[metadata]
name = wtl
version = 0.1
url = https://github.com/heavywatal/pywtl
author = Watal M. Iwasaki
author_email = heavy.watal@gmail.com
license = file: LICENSE
description = wtl: Personal Python package
long_description = file: README.md
platforms = macos, linux

[options]
zip_safe = False
packages = find:
install_requires = psutil; requests
entry_points = file: entry_points.cfg
