[metadata]
name = wtl
version = attr: wtl.__version__
url = https://github.com/heavywatal/pywtl
author = Watal M. Iwasaki
author_email = heavy.watal@gmail.com
license_file = LICENSE
description = wtl: Personal Python package
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  psutil
  requests
entry_points = file: entry_points.cfg
