[metadata]
name = wtl
version = attr: wtl.__version__
url = https://github.com/heavywatal/pywtl
author = Watal M. Iwasaki
author_email = heavywatal@gmail.com
license_files = LICENSE
description = wtl: Personal Python package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  psutil
  requests
python_requires = >=3.9
entry_points = file: entry_points.cfg
packages = find:
